# imtd

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run_discovery.sh  run_experiment.sh
python/imtd/: __init__.py  discovery.py
python/imtd/algo/: __init__.py
python/imtd/algo/analysis/: Optimzation_Goals.py  __init__.py  dfg_functions.py
python/imtd/algo/discovery/: __init__.py
python/imtd/algo/discovery/dfg/: __init__.py  algorithm.py
python/imtd/algo/discovery/dfg/adapters/: __init__.py
python/imtd/algo/discovery/dfg/adapters/pandas/: __init__.py
python/imtd/algo/discovery/dfg/utils/: __init__.py
python/imtd/algo/discovery/dfg/variants/: __init__.py
python/imtd/algo/discovery/inductive/: __init__.py  algorithm.py
python/imtd/algo/discovery/inductive/util/: __init__.py  cut_detection.py  detection_utils.py
python/imtd/algo/discovery/inductive/variants/: __init__.py  imf.py
python/imtd/algo/discovery/inductive/variants/im/: __init__.py  algorithm.py
python/imtd/algo/discovery/inductive/variants/im_bi/: __init__.py  algorithm.py
python/imtd/filtering/: __init__.py
python/tests/: test_algo.py  test_distance.py
scripts/: calculate_distance.py  experiment.py  experiment_1.py  generate_event_log.py  main.py  model_evaluation.py  plot.py  split_data.py  test_functions.py
src/: algorithms.rs  cost.rs  distance.rs  lib.rs  mapping.rs
src/cost/: fit.rs  imbi.rs  mod.rs  utils.rs
src/cost/imfc/: balanced.rs  mod.rs  weighted.rs
src/graph/: dfg.rs  mod.rs  py_graph.rs
src/pm4py/: obj.rs
(+26 files in other folders)
