[build-system]
requires = ["maturin>=1.7,<2.0", "setuptools"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry]
name = "imtd"
version = "0.1.0"
description = "Discoviering process model utilizing desirable and undesirable traces"
authors = ["Xudong Zhu"]
readme = "README.md"
packages = [{ include = "imtd", from = "python" }]

[tool.poetry.dependencies]
python = ">=3.10"
pm4py = "=2.7.11.14"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"

[tool.poetry.scripts]
discover = "scripts.main:main"
split_data = "scripts.split_data:main"
calculate_distance = "scripts.calculate_distance:main"
generate_event_log = "scripts.generate_event_log:main"
experiment = "scripts.experiment:main"
plot = "scripts.plot:main"
